banner item completed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project-1</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
+    <div class="nav">
+        <h3 class="text-heading">Bangladesh 2.0</h3>
+        <button class="btn">Sign In</button>
+    </div>
+
+
+    <header>
+
+
+        <div class="banner">
+
+
+            <div class="heading-text">
+
+                <h5 class="text-h5">Bangladesh 2.0</h5>
+                <h1 class="text-h1">Idea , innovation , vision and challenges in New Bangladesh.</h1>
+                <button class="text-p">Explore New Bangladesh</button>
+            </div>
+            
+                <img src="images/hero.png" alt="">
+
+            </div>
+
+
+
+
+
+
+
+        </div>
+
+
+    </header>
+
+    <main>
+
+    </main>
+
+
+    <footer>
+
+    </footer>
+
+
+
 </body>
 </html>
